--- a/style.css
+++ b/style.css
@@ -16,12 +16,8 @@
         color: #ffe0ff !important;
     }
 
-
-
-    .suraHeaderFrame {
-
-        background: url(https://raw.githubusercontent.com/ryanthomas-org/tanzil-surf/main/img.png) no-repeat center center !important;
-
+    .suraHeaderFrame{
+        background:url('https://port/src/img.jpg') no-repeat center center !important;
     }
 
     #searchPattern, .searchResults, .qFrameMiddle, .suraHeaderFrame, .quranText .ayaNumber, .transText .bism, .quranText, .page-header, .browse.rtl .content, .browse.rtl .header {
